# blossom_encrypted_journal

./: Cargo.toml  README.md  TODO.md  install.sh
data/: blossom.css  com.blossom.journal.desktop
src/: main.rs  settings.rs
src/audio/: mod.rs
src/mpris/: mod.rs
src/ui/: mod.rs  vault_dialog.rs  window.rs
src/vault/: crypto.rs  mod.rs  types.rs
